src/test/resources/semantic/accept/parameterShadowsFunction.ul
void main() {
}

int foo(int foo) {
}

void bar(int bar) {
}
