src/test/resources/semantic/reject/voidParamBeginning.ul
void main() {
}

void foo(void param) {
}
